--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=Germania+One&family=Iceberg&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 body {
-  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 1080px;
+  max-width: 778px;
   margin: 0 auto;
   padding: 2rem;
+  /* color: #647d75; */
   color: #93a8a2;
   background: #0f1610;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 300;
 }
 
 p {
@@ -19,14 +29,13 @@ p {
 }
 
 code {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
-    "Courier New", monospace;
+  font-family: "IBM Plex Mono", SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
 }
 
 a {
   color: #2f7e25;
   text-decoration: none;
-  font-weight: 500;
   transition: ease 0.3s;
 }
 
@@ -35,19 +44,15 @@ a:hover {
 }
 
 blockquote > p {
-  font-weight: 600;
-}
-
-.header {
-  margin-bottom: 1rem;
+  font-weight: 300;
+  font-style: italic;
 }
 
 .header__site-title {
-  font-family: "Germania One";
-  font-size: 3rem;
+  font-weight: 400;
+  font-size: 2.25rem;
   text-decoration: none;
   color: #2f7e25;
-  font-weight: 400;
 }
 
 .header__site-title:hover {
@@ -59,10 +64,11 @@ blockquote > p {
   flex-direction: row;
   justify-content: flex-start;
   gap: 30px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .post-listing__date {
+  font-weight: 300;
   min-width: 100px;
 }
 
@@ -70,5 +76,8 @@ blockquote > p {
   .post-listing {
     flex-direction: column;
     gap: 0;
+  }
+  body {
+    padding: 1rem;
   }
 }
