--- a/src/index.css
+++ b/src/index.css
@@ -24,8 +24,13 @@ h6 {
   font-weight: 300;
 }
 
-p {
+p,
+ul {
   line-height: 1.5;
+}
+
+li:not(:last-child) {
+  padding-bottom: 1rem;
 }
 
 code {
