--- a/src/prismjs.css
+++ b/src/prismjs.css
@@ -1,5 +1,5 @@
-code[class*='language-'],
-pre[class*='language-'] {
+code[class*="language-"],
+pre[class*="language-"] {
   color: #637d75;
   background: none;
   text-align: left;
@@ -19,43 +19,42 @@ pre[class*='language-'] {
   font-size: 14px;
 }
 
-pre[class*='language-']::-moz-selection,
-pre[class*='language-'] ::-moz-selection,
-code[class*='language-']::-moz-selection,
-code[class*='language-'] ::-moz-selection {
+pre[class*="language-"]::-moz-selection,
+pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection,
+code[class*="language-"] ::-moz-selection {
   text-shadow: none;
   background: #11261698;
 }
 
-pre[class*='language-']::selection,
-pre[class*='language-'] ::selection,
-code[class*='language-']::selection,
-code[class*='language-'] ::selection {
+pre[class*="language-"]::selection,
+pre[class*="language-"] ::selection,
+code[class*="language-"]::selection,
+code[class*="language-"] ::selection {
   text-shadow: none;
   background: #11261698;
 }
 
 @media print {
-  code[class*='language-'],
-  pre[class*='language-'] {
+  code[class*="language-"],
+  pre[class*="language-"] {
     text-shadow: none;
   }
 }
 /* Code blocks */
-pre[class*='language-'] {
+pre[class*="language-"] {
   padding: 1em;
   margin: 0.5em 0;
   overflow: auto;
 }
 
-:not(pre) > code[class*='language-'],
-pre[class*='language-'] {
-  background: #0f1610;
-  border: 1px solid #1d4125;
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
+  background: #000e07;
 }
 
 /* Inline code */
-:not(pre) > code[class*='language-'] {
+:not(pre) > code[class*="language-"] {
   padding: 0.1em;
   border-radius: 0.3em;
   white-space: normal;
@@ -88,14 +87,12 @@ pre[class*='language-'] {
 }
 
 .token.number {
-    color: #00e0c4;
+  color: #00e0c4;
 }
-
 
 .token.parameter {
-    color: #327f77;
+  color: #327f77;
 }
-
 
 .token.string,
 .token.char,
@@ -118,7 +115,8 @@ pre[class*='language-'] {
   color: #2f7e25;
 }
 
-.token.function, .token.class-name {
+.token.function,
+.token.class-name {
   color: #717f24;
 }
 
@@ -142,9 +140,8 @@ pre[class*='language-'] {
 }
 
 .token.builtin {
-    color: #47587f;
+  color: #47587f;
 }
-
 
 pre.line-numbers {
   position: relative;
