--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,19 @@ body {
     Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  max-width: 778px;
-  margin: 0 auto;
-  padding: 2rem;
+
+  /* max-width: 778px; */
+
   /* color: #647d75; */
   color: #93a8a2;
   background: #0f1610;
+  margin: 0;
+}
+
+.main {
+  max-width: 778px;
+  padding: 1rem 2rem;
+  margin: 0 auto;
 }
 
 h1,
@@ -26,7 +33,7 @@ h6 {
 
 p,
 ul {
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 li:not(:last-child) {
@@ -59,9 +66,19 @@ blockquote > p {
   font-style: italic;
 }
 
+.header {
+  z-index: 1;
+  position: sticky;
+  top: 0;
+  padding: 0.5rem 2rem;
+  background: #000e07;
+}
+
 .header__site-title {
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
   font-weight: 400;
-  font-size: 2.25rem;
+  font-size: 1.8rem;
   text-decoration: none;
   color: #2f7e25;
 }
@@ -75,7 +92,7 @@ blockquote > p {
   flex-direction: row;
   justify-content: flex-start;
   gap: 30px;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.6rem;
 }
 
 .post-listing__date {
@@ -83,12 +100,19 @@ blockquote > p {
   min-width: 100px;
 }
 
+.post h1 {
+  margin-top: 0.5rem;
+}
+
 @media only screen and (max-width: 480px) {
   .post-listing {
     flex-direction: column;
     gap: 0;
   }
-  body {
+  .main {
     padding: 1rem;
+  }
+  .header {
+    padding: 0.5rem 1rem;
   }
 }
