--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ h6 {
 
 p,
 ul {
-  line-height: 1.6;
+  line-height: 1.5;
 }
 
 li:not(:last-child) {
@@ -78,7 +78,7 @@ blockquote > p {
   text-transform: uppercase;
   letter-spacing: 0.5px;
   font-weight: 400;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   text-decoration: none;
   color: #2f7e25;
 }
@@ -101,8 +101,14 @@ blockquote > p {
 }
 
 .post h1 {
+  font-size: 1.8rem;
   margin-top: 0.5rem;
 }
+
+/* img {
+  max-width: 500px;
+  max-height: 500px;
+} */
 
 @media only screen and (max-width: 480px) {
   .post-listing {
