--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ code {
 li > code.language-text,
 p > code.language-text {
   background: none;
-  color: #93a8a2;
+  color: #647d75;
 }
 
 .token.comment {
