--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
 
 h1 {
   font-weight: 500;
+  font-size: 1.8rem;
 }
 
 h2,
@@ -31,7 +32,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 300;
+  font-weight: 400;
 }
 
 p,
