--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,27 @@ hr {
   }
 }
 
+.footnotes {
+  font-size: 14px;
+}
+
 /* Overrides */
 .gatsby-resp-image-image {
   box-shadow: none !important;
+}
+
+.code-block-header {
+  background: #000e07;
+  color: #647d75;
+  margin-bottom: 0 !important;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: left;
+  padding: 0.5rem;
+  padding-left: 1rem;
+  border-bottom: 1px solid #647d75;
+}
+
+pre {
+  margin-top: 0 !important;
 }
