--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap");
 
 body {
-  font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   /* max-width: 778px; */
 
   color: #647d75;
-  /* color: #93a8a2; */
   background: #0f1610;
   margin: 0;
 }
@@ -32,12 +31,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 400;
+  font-weight: 300;
 }
 
 p,
 ul {
-  line-height: 1.6;
+  line-height: 1.5;
 }
 
 li:not(:last-child) {
@@ -45,9 +44,13 @@ li:not(:last-child) {
 }
 
 code {
-  font-family: "IBM Plex Mono", SFMono-Regular, Menlo, Monaco, Consolas,
+  font-family: "Fira Code", SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
   font-weight: 400;
+}
+
+code span.comment {
+  font-style: normal !important;
 }
 
 li > code.language-text,
@@ -81,6 +84,9 @@ table {
   border-collapse: collapse;
 }
 
+th {
+  font-weight: 500;
+}
 th,
 td {
   padding: 0.5rem;
@@ -120,6 +126,7 @@ tbody td {
   font-size: 1.5rem;
   text-decoration: none;
   color: #2f7e25;
+  font-family: "IBM Plex Sans";
 }
 
 .header__wrapper {
@@ -169,6 +176,7 @@ hr {
 
 .post-listing__date {
   min-width: 100px;
+  font-family: "Fira Code";
 }
 
 .post h1 {
@@ -213,14 +221,14 @@ hr {
 
 .code-block-header {
   background: #000e07;
-  color: #647d75;
+  color: #3c4812;
   margin-bottom: 0 !important;
   font-size: 14px;
   font-weight: 500;
   text-align: left;
   padding: 0.5rem;
   padding-left: 1rem;
-  border-bottom: 1px solid #647d75;
+  /* border-bottom: 1px solid #3c4812; */
 }
 
 pre {
