--- a/src/index.css
+++ b/src/index.css
@@ -120,13 +120,10 @@ tbody td {
 }
 
 .header__site-title {
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  font-weight: 400;
-  font-size: 1.5rem;
+  font-weight: 600;
+  font-size: 1.3rem;
   text-decoration: none;
   color: #2f7e25;
-  font-family: "IBM Plex Sans";
 }
 
 .header__wrapper {
@@ -139,6 +136,7 @@ tbody td {
 }
 
 .header__logo {
+  display: none;
   max-width: 25px;
   margin-right: 0.8rem;
 }
