--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ tbody td {
 
 .header__site-title {
   font-weight: 600;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   text-decoration: none;
   color: #2f7e25;
 }
@@ -169,16 +169,16 @@ hr {
   flex-direction: column;
   justify-content: flex-start;
   /* gap: 30px; */
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
-.post-listing__date {
-  /* min-width: 100px; */
-  /* font-family: "Fira Code"; */
-}
+/* .post-listing__date {
+  min-width: 100px;
+  font-family: "Fira Code";
+} */
 
 .post h1 {
-  /* font-size: 1.8rem; */
+  /* font-size: 1.8rem;  */
   margin-top: 0.5rem;
 }
 
