--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,9 @@ tbody td {
 
 .header__wrapper {
   display: flex;
-  align-items: center;
+  width: 100%;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .header__site-title:hover {
