--- a/src/index.css
+++ b/src/index.css
@@ -255,7 +255,7 @@ pre {
 .footer__wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
 }
 
@@ -265,7 +265,8 @@ pre {
 }
 
 .not-ai-badge {
-  width: 90px;
+  margin-top: 2rem;
+  /* width: 90px; */
 }
 
 html,
