complete style revamp

--- a/src/components/PostLink/PostLink.scss
+++ b/src/components/PostLink/PostLink.scss
@@ -1,11 +1,7 @@
 .PostLink {
-  //  display: flex;
-  //  flex-direction: column;
-  //  justify-content: space-between;
-
   gap: 0;
   margin-bottom: 0.5rem;
   &__date {
-    font-style: italic;
+    // font-style: italic;
   }
 }
