--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,13 @@
 @import "../../styles/variables";
 
 .Header {
-  // background: #1b1b1b;
-  border: 2px solid $foreground;
-  padding: 0.25rem 0.25rem;
-
-  text-align: center;
+  border-bottom: 2px solid $foreground;
+  padding: 0.5rem 0.5rem;
+  padding-left: 0;
   &__site-title {
     text-transform: uppercase;
     font-size: 1.25rem;
-    font-weight: 600;
+    font-weight: 700;
     text-decoration: none;
     color: $foreground;
   }
