--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -3,6 +3,18 @@ body {
   color: $foreground;
 }
 
+h2 {
+  font-family: $font_stack_sans;
+  font-weight: 500;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font_stack_serif;
+  // font-weight: 500;
+}
 hr {
   border: none;
   height: 1px;
