change weight of intro text

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -25,9 +25,9 @@ hr {
   font-family: $font_stack_sans;
 }
 
-.introduction p {
-  font-weight: 600;
-}
+// .introduction p {
+//   font-weight: 600;
+// }
 
 blockquote {
   font-style: italic;
