--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,8 +4,8 @@ body {
 }
 
 h2 {
-  font-family: $font_stack_sans;
-  font-weight: 500;
+  //  font-family: $font_stack_sans;
+  //  font-weight: 500;
 }
 
 h3,
