add padding to post header block

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -22,6 +22,10 @@ body {
   padding-top: 1rem;
 }
 
+.post {
+  padding-top: 1rem;
+}
+
 @media only screen and (max-width: 778px) {
   .main {
     padding: 0.5rem;
