adjust inline special fonts

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -28,3 +28,11 @@ hr {
 blockquote {
   font-style: italic;
 }
+
+p > code {
+  font-size: 14px !important;
+}
+
+.math-inline {
+  font-size: 14px;
+}
