more style tweaks

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,7 +5,7 @@ body {
 }
 .main {
   width: 80%;
-  margin: 0 auto;
+  margin: 0.5rem auto;
   padding: 1rem 2rem;
   max-width: 778px;
 }
@@ -23,7 +23,7 @@ body {
 }
 
 .post {
-  padding-top: 1rem;
+  padding-top: 0.5rem;
 }
 
 div.math-display {
@@ -34,6 +34,6 @@ div.math-display {
   .main {
     padding: 0.5rem;
     width: 90%;
-    margin: 0 auto;
+    margin: 0.5rem auto;
   }
 }
