--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,14 +1,15 @@
 @import "../../styles/variables";
 
 .Header {
-  border: 2px solid $foreground;
-  padding: 0.5rem 0.5rem;
+  border-bottom: 2px solid $foreground;
+  padding: 0 0 0.5rem 0;
   padding-left: 0;
 
-  text-align: center;
+  // text-align: center;
   &__site-title {
+    //    letter-spacing: 0.9px;
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 1.5em;
     font-weight: 600;
     text-decoration: none;
     color: $foreground;
@@ -16,6 +17,10 @@
 }
 
 @media only screen and (max-width: 778px) {
-  // .Header {
-  // }
+  .Header {
+    padding-top: 0.5rem;
+    &__site-title {
+      font-size: 1.3em;
+    }
+  }
 }
