--- a/src/components/PostLink/PostLink.scss
+++ b/src/components/PostLink/PostLink.scss
@@ -1,6 +1,9 @@
 .PostLink {
   gap: 0;
   margin-bottom: 0.5rem;
+  &__date {
+    font-style: italic;
+  }
 }
 
 @media only screen and (max-width: 778px) {
