--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,15 +1,15 @@
 @import "../../styles/variables";
 
 .Header {
-  border-bottom: 2px solid $foreground;
-  padding: 0 0 0.5rem 0;
+  // border-bottom: 2px solid $foreground;
+  //  padding: 0 0 0.5rem 0;
   padding-left: 0;
 
   // text-align: center;
   &__site-title {
     //    letter-spacing: 0.9px;
-    text-transform: uppercase;
-    font-size: 1.5em;
+    //  text-transform: uppercase;
+    font-size: 1.7em;
     font-weight: 600;
     text-decoration: none;
     color: $foreground;
