--- a/src/components/PostLink/PostLink.scss
+++ b/src/components/PostLink/PostLink.scss
@@ -1,8 +1,8 @@
 .PostLink {
   gap: 0;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.5em;
   &__date {
-    font-style: italic;
+    //    font-style: italic;
   }
 }
 
