--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -5,14 +5,14 @@ body {
 }
 
 .post__title {
-  font-size: 1.6rem;
+  font-size: 1.7rem;
   margin: 1rem 0;
 }
 
 p,
 ul,
 li {
-  line-height: 1.5;
+  line-height: 1.6em;
 }
 
 hr {
@@ -22,7 +22,7 @@ hr {
 }
 
 .Header {
-  font-family: $font_stack_sans;
+  //  font-family: $font_stack_sans;
 }
 
 blockquote {
