--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -4,6 +4,16 @@ body {
   font-weight: 400;
 }
 
+a {
+  color: royalblue;
+  text-decoration: none;
+  border-bottom: 2px solid rgb(157, 182, 255);
+  &:hover {
+    color: rgb(245, 78, 78);
+    border-bottom: 2px solid rgb(245, 78, 78);
+  }
+}
+
 .post__title {
   font-size: 1.7rem;
   margin: 1rem 0;
@@ -29,18 +39,20 @@ blockquote {
   font-style: italic;
 }
 
-// p {
+p > code,
+li > code {
+  font-weight: 600;
+  font-size: 14px !important;
+}
 
+// .math-inline {
+//   font-size: 14px;
 // }
 
-p > code {
-  font-size: 12px !important;
-}
-
-.math-inline {
-  font-size: 14px;
-}
-
 ol[type="a"] > li {
+  font-style: italic;
+}
+
+.introduction p {
   font-style: italic;
 }
