--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,6 @@
 $foreground: #404040;
+$grey: #f8f9fa;
+$grey_darkened: #c4c4c4;
 
 $font_stack_sans: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans,
   Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
