further superficial style changes

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -50,7 +50,8 @@ ol[type="a"] > li {
 }
 
 .introduction p {
-  font-style: italic;
+  // font-style: italic;
+  font-weight: 500;
 }
 
 .posts-header {
