--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,17 +1,20 @@
 @import "../../styles/variables";
 
 .Header {
-  border-bottom: 3px solid $foreground;
-  padding: 0 0 1rem 0;
+  padding: 0.5rem 1rem;
   padding-left: 0;
-
+  background: #f8f9fa;
+  border: 2px solid #c4c4c4;
+  text-align: center;
   &__site-title {
     border-bottom: none;
     font-size: 1.8em;
     font-weight: 800;
     color: $foreground;
     &:hover {
+      text-decoration: none;
       border-bottom: none;
+      color: $foreground;
     }
   }
 }
