--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,6 +2,9 @@ body {
   font-family: $font_stack_sans;
   color: $foreground;
   font-weight: 400;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-kerning: normal;
 }
 
 a {
@@ -22,7 +25,7 @@ a {
 p,
 ul,
 li {
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 hr {
@@ -50,12 +53,13 @@ ol[type="a"] > li {
 }
 
 .introduction p {
-  // font-style: italic;
-  font-weight: 500;
+  //  font-style: italic;
+  //  font-weight: 500;
 }
 
 .posts-header {
   margin-bottom: 0;
+  margin-top: 0;
 }
 
 h2 > code {
