--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -54,7 +54,7 @@ ol[type="a"] > li {
 
 .introduction p {
   //  font-style: italic;
-  //  font-weight: 500;
+  font-weight: 500;
 }
 
 .posts-header {
