style: re-add image caption style

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -65,3 +65,8 @@ ol[type="a"] > li {
 h2 > code {
   font-size: 1.2rem !important;
 }
+
+.blog-image-caption {
+  text-align: center;
+  font-style: italic;
+}
