style: add border radius to header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,6 +5,7 @@
   padding-left: 0;
   background: #f8f9fa;
   border: 2px solid #c4c4c4;
+  border-radius: 3px;
   text-align: center;
   &__site-title {
     border-bottom: none;
