style: add custom chart titles

--- a/src/components/SingleMetrics/SingleMetrics.scss
+++ b/src/components/SingleMetrics/SingleMetrics.scss
@@ -9,6 +9,6 @@
     flex-grow: 1; /* allows the element to grow to fill any remaining space */
     flex-shrink: 0; /* prevents the element from shrinking */
     flex-basis: calc(15% - 20px);
-    min-height: 100px;
+    // min-height: 100px;
   }
 }
