--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -49,9 +49,14 @@ div.math-display {
     align-items: center;
     justify-content: space-between;
   }
+  &__title {
+    font-size: 1.7rem;
+    margin: 1rem 0 0 0;
+  }
 
   &__block {
-    margin: 0 0 1rem;
+    margin: 1rem 0;
+    padding: 0.25rem;
   }
 
   .error-wrapper {
