--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -55,6 +55,7 @@ ol[type="a"] > li {
 .introduction p {
   //  font-style: italic;
   font-weight: 500;
+  text-align: center;
 }
 
 .posts-header {
