--- a/src/components/SelectInput/SelectInput.scss
+++ b/src/components/SelectInput/SelectInput.scss
@@ -8,7 +8,7 @@
   select {
     font-family: $font_stack_sans;
     font-size: 14px;
-    font-weight: 500 !important;
+    font-weight: 400;
     border-radius: 3px;
     width: 100%;
     appearance: none;
