style: make chart controls responsive

--- a/src/components/CodeMetricsControls/CodeMetricsControls.scss
+++ b/src/components/CodeMetricsControls/CodeMetricsControls.scss
@@ -1,6 +1,11 @@
 .CodeMetricsControls {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-end;
   gap: 20px;
+  width: 100%;
+  @media (max-width: 768px) {
+    justify-content: center;
+  }
 }
