--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -18,4 +18,7 @@ $main_colour_darker: darken($main_colour, 3%);
     background: royalblue;
     color: white;
   }
+  @media (max-width: 768px) {
+    width: 100%;
+  }
 }
