refactor: rename single metric to scorecard

--- a/src/components/Scorecard/Scorecard.scss
+++ b/src/components/Scorecard/Scorecard.scss
@@ -1,6 +1,6 @@
 @import "../../styles/variables";
 
-.SingleMetricDisplay {
+.Scorecard {
   font-family: $font_stack_sans;
   font-size: 13px;
   background-color: $grey;
