Revert "style: remove sticky header"
This reverts commit ffcc71bc9a46240f5ac7f29d91a8c6276901b9ab.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   padding-left: 0;
   background: #f8f9fa;
   text-align: center;
-  //  position: sticky;
+  position: sticky;
   top: 0;
   z-index: 100;
   &__site-title {
