feature: complete rough draft of fave articles and BE part of blog post

--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -23,7 +23,7 @@ tbody tr:nth-child(even) {
 }
 
 th {
-  border-bottom: 3px double black; /* add double underline to header cells */
+  //  border-bottom: 3px double black; /* add double underline to header cells */
   background-color: #f8f9fa; /* add background color to header cells */
   padding: 0.25em; /* add padding to cells */
 }
