--- a/src/styles/_tables.scss
+++ b/src/styles/_tables.scss
@@ -1,29 +1,73 @@
 table {
-  border-collapse: collapse; /* remove border-spacing */
+  border-collapse: collapse;
   width: 100%;
-  margin-bottom: 1em; /* add spacing between tables */
+  margin-bottom: 1em;
   a,
   a:hover {
     border-bottom: none;
   }
 }
 
-th,
-td {
-  padding: 0.25em; /* add padding to cells */
-  border: 1px solid black; /* add borders to cells */
-}
-
 th {
-  background-color: #f8f9fa; /* add background color to header cells */
+  background-color: #f8f9fa;
 }
 
 tbody tr:nth-child(even) {
-  background-color: #f8f9fa; /* add alternating row background color */
+  background-color: #f8f9fa;
 }
 
 th {
-  //  border-bottom: 3px double black; /* add double underline to header cells */
-  background-color: #f8f9fa; /* add background color to header cells */
-  padding: 0.25em; /* add padding to cells */
+  background-color: #fff;
+  border: 1px solid #ccc;
+}
+
+/* Style table cells */
+td {
+  padding: 5px;
+  border: 1px solid #ccc;
+}
+
+thead {
+  position: relative;
+  height: 1rem;
+}
+
+th {
+  padding: 5px;
+}
+
+/* Show loading bar if dynamic data */
+
+thead.loading::after {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: royalblue;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0;
+  animation: loadingAnimation 2s linear infinite;
+}
+
+/* Animation keyframes */
+@keyframes loadingAnimation {
+  0% {
+    width: 0;
+  }
+  50% {
+    width: 50%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+/* Longer width for article title in Recommended Articles table */
+
+table.articles-table {
+  td:first-of-type,
+  tr th:first-of-type {
+    width: 500px;
+  }
 }
