--- a/src/components/CodeMetrics/CodeMetrics.scss
+++ b/src/components/CodeMetrics/CodeMetrics.scss
@@ -28,14 +28,13 @@
 
   .error-wrapper {
     font-family: $font_stack_sans;
-    width: 100%;
-    color: red;
+    color: rgb(235, 65, 65);
     font-weight: 500;
     font-size: 0.825rem;
-    border: 1px solid red;
+    border: 1px solid rgb(235, 65, 65);
     border-radius: 3px;
     padding: 0.5rem;
     margin: 1rem 0;
-    background-color: rgb(255, 198, 198);
+    background-color: rgb(255, 210, 210);
   }
 }
