style: set post link on own line

--- a/src/components/PostLink/PostLink.scss
+++ b/src/components/PostLink/PostLink.scss
@@ -7,10 +7,10 @@
   }
 }
 
-@media only screen and (max-width: 778px) {
-  .PostLink {
-    &__date {
-      display: none;
-    }
-  }
-}
+// @media only screen and (max-width: 778px) {
+//   .PostLink {
+//     &__date {
+//       display: none;
+//     }
+//   }
+// }
