--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,8 +3,10 @@
 .Header {
   padding: 0.5rem 1rem;
   padding-left: 0;
-  background: #f8f9fa;
+  background: $grey;
   text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 3px;
   // position: sticky;
   top: 0;
   z-index: 100;
