style: remove header border again

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   padding-left: 0;
   background: $grey;
   text-align: center;
-  border: 1px solid #ccc;
+  //  border: 1px solid #ccc;
   border-radius: 3px;
   // position: sticky;
   top: 0;
